<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="18dp"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:id="@+id/accused"
        android:textSize="18dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/accused"
        android:layout_margin="10dp"
        android:gravity="center"
        android:id="@+id/gender"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gender"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:text="Details"
        android:gravity="center"
        android:id="@+id/heading"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/nature"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_below="@id/divider6"
        android:layout_height="wrap_content"
        android:id="@+id/detailsTxt"/>
    <View
        android:id="@+id/divider6"
        android:layout_below="@id/nature"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:paddingTop="5dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actions"
        android:gravity="center"
        android:layout_above="@id/divider5"
        android:id="@+id/actionText"/>

    <View
        android:id="@+id/divider5"
        android:layout_above="@id/actionLayout"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:background="?android:attr/listDivider"
        android:paddingTop="5dp" />
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/actionLayout"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="50dp">
        <RelativeLayout
            android:id="@+id/callLayout"
            android:elevation="5dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/call"
            android:layout_margin="4dp"
            android:textColor="@color/white">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_local_phone_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/call"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:textColor="@color/white"/>
        </RelativeLayout>
        <RelativeLayout
            android:elevation="5dp"
            android:id="@+id/smsLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="@string/call"
            android:layout_margin="4dp"
            android:textColor="@color/white">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_sms_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sms"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:textColor="@color/white"/>
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>